--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -7,6 +7,8 @@ db.password=Pp221Apple1976@@@###Fuck
 # Hibernate properties
 hibernate.show_sql=false
 hibernate.hbm2ddl.auto=update
+hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 
 
 
