add some log info

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -11,5 +11,5 @@ appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} -
 appender.file.filter.threshold.type = ThresholdFilter
 appender.file.filter.threshold.level = info
 
-rootLogger=debug, LOGFILE
+rootLogger=debug, STDOUT, LOGFILE
 
