--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,13 @@
       <version>2.18.0</version>
     </dependency>
 
+    <!-- MySQL -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.25</version>
+    </dependency>
+
   </dependencies>
 
   <build>
