fix some init problem

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,6 @@
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/pp221?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
+db.url=jdbc:mysql://localhost:3306/pp221?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC&allowPublicKeyRetrieval=true
+# db.url="jdbc:mysql://localhost:3306/pp221?useUnicode=true&amp;characterEncoding=UTF-8&amp;useSSL=false&amp;allowPublicKeyRetrieval=true"
 db.username=pp221
 db.password=Pp221Apple1976@@@###Fuck
 
