--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
     <failOnMissingWebXml>false</failOnMissingWebXml>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <spring.version>5.3.14</spring.version>
-    <hibernate.version>5.3.5.Final</hibernate.version>
-    <hibernate.validator>5.4.1.Final</hibernate.validator>
+    <hibernate.version>5.6.3.Final</hibernate.version>
+    <hibernate.validator>5.6.3.Final</hibernate.validator>
     <c3p0.version>0.9.5.2</c3p0.version>
     <jstl.version>1.2.1</jstl.version>
     <tld.version>1.1.2</tld.version>
@@ -43,7 +43,7 @@
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
-      <version>5.2.17.Final</version>
+      <version>${hibernate.version}</version>
     </dependency>
 
     <!-- Servlet Dependency -->
@@ -86,6 +86,22 @@
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.25</version>
+    </dependency>
+
+    <!-- JAXB problem resolve -->
+    <!-- https://mvnrepository.com/artifact/jakarta.xml.bind/jakarta.xml.bind-api -->
+    <dependency>
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
+      <version>2.3.3</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-ri -->
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-ri</artifactId>
+      <version>2.3.7</version>
+      <type>pom</type>
     </dependency>
 
   </dependencies>
